@@ -1,1 +1,2 @@
 DIST qtconsole-4.0.1.tar.gz 400542 SHA256 7d2cf976bb960df11f413709b5b5b809365c48426110e946d0c12117e6ced3a5 SHA512 2ffc913e627122c9fc0a6a11f0ad7e0337a4490cc19b3e58aeefbc01be4b8d79d52e2111fe47f18e0013bbc86c73bb3252d9f993ec14c1d57728ec9a2df33ddd WHIRLPOOL debecb30900dee4cdad2db2199f4c2f1ded606591548432af648012fe86bba15982c5c5e484bcfefda2d1c8322a1474e6c593ea1a5f2231f573b6a9dd6e04a6b
+DIST qtconsole-4.1.0.tar.gz 401571 SHA256 61fb6e001dd2619a9fe8bd3a096d91c2c794cd9b2c7550a6df27ab6d5d03eb19 SHA512 027b9ffa5a204f2675424eb89ac9d8e5fd6d8abb967eeaf5f4a91caef53ffac9ebe4a431145df1e0d1b8e23ad6b788b77f7c5fe2f800a6a2f37f0eb0649f9201 WHIRLPOOL d906cdd759916e33d6fd24bf0287837f44341bcfd90a86cd63d03a0ee2263d13370d50adfff849cad7d4eb874d7a5a4f20a0a937bdedf5584ca0b9961f879d5f
