@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*qtconsole-4.1.0 (16 Oct 2015)
+
+  16 Oct 2015; Marius Brehler <marbre@linux.sungazer.de>
+  +qtconsole-4.1.0.ebuild:
+  dev-python/qtconsole: Version bump to 4.1.0
+
   22 Sep 2015; Marius Brehler <marbre@linux.sungazer.de> qtconsole-9999.ebuild:
   dev-python/qtconsole: Add ~x86 to KEYWORDS, fixes #561032
 
